k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websats
  labels:
    app: websats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websats
  template:
    metadata:
      labels:
        app: websats
      annotations:
        #sidecar.istio.io/inject: "false"
        prometheus.io/path: /metrics
        prometheus.io/port: '8090'
        prometheus.io/scrape: 'true'
    spec:
      containers:
        - name: websats
          image: david62243/websats:v2.1
          imagePullPolicy: Always
          resources:
            limits:
              cpu: '500m'
              memory: 1Gi
            requests:
              cpu: '500m'
              memory: 1Gi
