k8s/service-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: websats-lb
  namespace: simulators
  labels:
    app: websats
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: websats
  type: LoadBalancer
