k8s/service-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: websats-nodeport
  namespace: websats
  labels:
    app: websats
spec:
  ports:
    - name: http
      port: 30001
      targetPort: 8080
      nodePort: 30001
  selector:
    app: websats
  type: NodePort
