k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websats
  namespace: websats
  annotations: #{}
    cert-manager.io/issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"  
    nginx.org/websocket-services: websats
spec:
  ingressClassName: websats
  tls:
  - hosts:
    - websats2.westus2.cloudapp.azure.com
    secretName: websats-tls
  rules:
  - host: websats2.westus2.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: websats
            port:
              number: 80
